force-app/main/default/objects/Campaign/fields/Campaign_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee, Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>