force-app/main/default/objects/Campaign/fields/CaseSafe_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Campaign_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Campaign ID</label>
    <type>Text</type>
</CustomField>