force-app/main/default/objects/Campaign/fields/cazoomi__CazoomiId__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__CazoomiId__c</fullName>
    <description>This field is not used anymore.</description>
    <externalId>true</externalId>
    <label>CazoomiId (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>