force-app/main/default/objects/Campaign/recordTypes/Annoucement.recordType-meta.xml
<RecordType>
    <fullName>Annoucement</fullName>
    <active>true</active>
    <label>Annoucement</label>
</RecordType>