force-app/main/default/objects/Campaign/recordTypes/Event_Announcement.recordType-meta.xml
<RecordType>
    <fullName>Event_Announcement</fullName>
    <active>true</active>
    <label>Event Announcement</label>
</RecordType>