force-app/main/default/objects/Campaign/recordTypes/Marketing_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Campaign</fullName>
    <active>true</active>
    <label>Marketing Campaign</label>
</RecordType>