force-app/main/default/objects/Campaign/recordTypes/Product_Launch.recordType-meta.xml
<RecordType>
    <fullName>Product_Launch</fullName>
    <active>true</active>
    <description>Campaign record type used for new product launches</description>
    <label>Product Launch</label>
</RecordType>