force-app/main/default/objects/Campaign/recordTypes/Targeted_Sales_Growth.recordType-meta.xml
<RecordType>
    <fullName>Targeted_Sales_Growth</fullName>
    <active>true</active>
    <description>Campaign record type for identifying accounts targetted for growth and related activities</description>
    <label>Targeted Sales Growth</label>
</RecordType>